# TunePulse-RS

./: .gitignore  Cargo.toml  README.MD  memory.x  temp.rs
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
pwm/: Cargo.toml
pwm/src/: main.rs
src/: lib.rs  main.rs
src/math_float/controllers/: pid.rs
src/math_integer/: mod.rs
src/math_integer/controllers/: pid.rs
src/phase_pattern_control/: mod.rs  motor_selector.rs  phase_selector.rs
src/position_handling/: angle_filter.rs  mod.rs  position_container.rs  speed_estimator.rs
src/pwm/: pwm.rs
test/adc_dma/: Cargo.toml
test/adc_dma/src/: main.rs
test/basic_motor/: Cargo.toml
test/basic_motor/src/: main.rs
test/blink/: Cargo.toml
test/blink/src/: main.rs
test/encoder/: Cargo.toml
test/encoder/src/: main.rs
test/encoder_dma/: Cargo.toml
test/encoder_dma/src/: main.rs
test/pwm/: Cargo.toml
test/pwm/src/: main.rs
test/rtt/: Cargo.toml
test/rtt/src/: main.rs
tests/blink/: Cargo.toml
tests/blink/src/: main.rs
tests/encoder/: Cargo.toml
tests/pwm/: Cargo.toml
tests/pwm/src/: main.rs
tests/rtt/: Cargo.toml
tests/spi_dma/: Cargo.toml
tests/spi_dma/src/: main.rs
tools/plotter/: Cargo.toml
tools/plotter/.cargo/: config.toml
tools/plotter/src/: main.rs
tunepulse_algo/: Cargo.toml
tunepulse_algo/src/: inputs_dump.rs  lib.rs
tunepulse_algo/src/analog/: mod.rs  supply_voltage.rs
tunepulse_algo/src/encoder_position/: mod.rs  speed_estimator.rs
tunepulse_algo/src/math_float/controllers/: pid.rs
tunepulse_algo/src/math_integer/: fifo_buffer.rs  mod.rs  normalization.rs  ohms_law.rs
tunepulse_algo/src/math_integer/filters/: lpf.rs
tunepulse_algo/src/math_integer/motion/: mod.rs  position_integrator.rs  speed_estimator.rs
tunepulse_algo/src/math_integer/motor/: bldc.rs  coil.rs  mod.rs
tunepulse_algo/src/motor_driver/: README.MD  mod.rs
tunepulse_algo/src/motor_driver/calibration/: angle_calibrator.rs  calibration_table.rs  mod.rs
tunepulse_algo/src/motor_driver/driver_pulse/: angle2pulse.rs  mod.rs
tunepulse_algo/src/motor_driver/driver_pwm/: mod.rs  motor_selector.rs  phase_selector.rs  sel_current.rs  sel_motor.rs
tunepulse_algo/src/motor_driver/pulse_control/: mod.rs
tunepulse_algo/src/motor_driver/pwm_control/: mod.rs  phase_selector.rs
tunepulse_drivers/: Cargo.toml
tunepulse_drivers/src/: lib.rs
tunepulse_drivers/src/encoder_spi/: mod.rs
tunepulse_drivers/src/pinout/: driver.rs  encoder.rs  led.rs  mod.rs
tunepulse_drivers/src/pwm/: mod.rs
tunepulse_drivers/src/spi/: mod.rs
tunepulse_rs/: Cargo.toml
tunepulse_rs/src/: dev_temp.rs  lib.rs
tunepulse_rs/src/analog/: adc_correction.rs  mod.rs  supply_voltage.rs
tunepulse_rs/src/encoder_position/: mod.rs  speed_estimator.rs
tunepulse_rs/src/math_integer/: clarke_transform.rs  mod.rs  trigonometry.rs
tunepulse_rs/src/math_integer/filters/: mod.rs
tunepulse_rs/src/motor_driver/: mod.rs
tunepulse_rs/src/motor_driver/pulse_control/: mod.rs
tunepulse_rs/src/motor_driver/pwm_control/: mod.rs  motor_selector.rs  phase_selector.rs
tunepulse_rs/src/pins/: pins.rs
tunepulse_rs/src/pwm/: pwm.rs
tunepulse_rs/src/spi/: spi.rs
