[workspace]
resolver = "2"
members = [
    "tests/blink",
    "tests/pwm",
]

[package]
name = "tunepulse_rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Universl motor controller firmware"
homepage = "https://creapunk.com"

[package.metadata]
authors = ["Anton Khrustalev"]

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
hal = { package = "stm32-hal2", version = "^1.8.0", features = ["g431", "g4rt"]}

rand = "0.8"
plotters = "0.3"