[package]
name = "rtt"
version = "0.1.0"
edition = "2021"

[dependencies]
# defmt = "0.3.0"
# defmt-rtt = "0.4.0"
panic-halt = "1.0.0"
# panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rtt-target = "0.6.0"

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
hal = { package = "stm32-hal2", version = "^1.8.0", features = ["g431", "g4rt"]}
embedded-time = "0.12.1"